; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_root_pools.c_acquire_pool_internal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_root_pools.c_acquire_pool_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }

@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, %struct.TYPE_4__*)* @acquire_pool_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @acquire_pool_internal(i32** %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32** %0, i32*** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @svn_mutex__lock(i32 %7)
  %9 = call i32 @SVN_ERR(i32 %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %2
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %18, align 8
  %20 = call i64 @apr_array_pop(%struct.TYPE_5__* %19)
  %21 = inttoptr i64 %20 to i32**
  %22 = load i32*, i32** %21, align 8
  br label %27

23:                                               ; preds = %2
  %24 = load i32, i32* @FALSE, align 4
  %25 = call i32 @svn_pool_create_allocator(i32 %24)
  %26 = call i32* @apr_allocator_owner_get(i32 %25)
  br label %27

27:                                               ; preds = %23, %16
  %28 = phi i32* [ %22, %16 ], [ %26, %23 ]
  %29 = load i32**, i32*** %3, align 8
  store i32* %28, i32** %29, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = load i32*, i32** @SVN_NO_ERROR, align 8
  %34 = call i32 @svn_mutex__unlock(i32 %32, i32* %33)
  %35 = call i32 @SVN_ERR(i32 %34)
  %36 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %36
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_mutex__lock(i32) #1

declare dso_local i64 @apr_array_pop(%struct.TYPE_5__*) #1

declare dso_local i32* @apr_allocator_owner_get(i32) #1

declare dso_local i32 @svn_pool_create_allocator(i32) #1

declare dso_local i32 @svn_mutex__unlock(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
